--- a/index.html
+++ b/index.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
-<body>
-     <div class="container">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
       <div class="top-div">
-      <p class="p1">Home</p>
-      <p class="p2">About</p>
-      <p class="p3">Clans</p>
-      <p class="p4">Town hahh</p>
-      <p class="p5">Troops</p>
-      <p class="p6">Contacts</p>
-      </div>
-      <p class="p7">#2 trending</p>
-      <h4 class="h1">supercell</h4>
-      <h1 class="h2">Goblins</h1>
-      <p class="p8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, perspiciatis.</p>
-      <div class="div-1">
-        <button class="b1">change</button>
-        <div class="div-2">
-          <i class="fa-solid fa-play"></i>
-          <button class="b2">watch gameplay</button>
+        <h1 class="h3">COC-STATS</h1>
+        <div class="top-2">
+          <p class="p1">Home</p>
+          <p class="p2">About</p>
+          <p class="p3">Clans</p>
+          <p class="p4">Town hahh</p>
+          <p class="p5">Troops</p>
+          <p class="p6">Contacts</p>
         </div>
       </div>
-
-     </div>
+      <div class="middle">
+        <div class="i-div">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="text-div">
+          <p class="p7">#2 trending</p>
+          <h4 class="h1">supercell</h4>
+          <h1 class="h2">Goblins</h1>
+          <p class="p8">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
+            perspiciatis.
+          </p>
+          <div class="div-1">
+            <button class="b1">change</button>
+            <div class="div-2">
+              <button class="b2">
+                <i class="fa-solid fa-play"></i>watch gameplay
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
